# SDLGamePOCs

./: tags
code/: BirchEngine.md  CMakeLists.txt  README.md  TODO.md  build.sh
code/clonegame/: CMakeLists.txt  game.cpp  game.h  inventory.cpp  inventory.h  main.cpp  player.cpp  player.h  textureManager.cpp  textureManager.h
code/docs/: BirchEngine.md  GameProgSummary.md  README.md
src/: CMakeLists.txt  Main.cpp
